preparing to launch + design, profiles etc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<app-navigation></app-navigation>
-<!--<div id="side_nav">
-    <div class="side_nav_container">
-        <router-outlet name="sidebar"></router-outlet>
-    </div>
-</div>--> 
-<router-outlet class="main_content"></router-outlet>
+<div class="container_all">
+    <app-navigation></app-navigation>
+    <!--<div id="side_nav">
+        <div class="side_nav_container">
+            <router-outlet name="sidebar"></router-outlet>
+        </div>
+    </div>--> 
+    <router-outlet class="main_content"></router-outlet>
+</div>
 <app-footer></app-footer>
