--- a/src/app/community/community.component.scss
+++ b/src/app/community/community.component.scss
@@ -146,3 +146,65 @@ a{
 .categories_checkbox{
     margin-top: 2%;
 }
+
+.mat-radio-button ~ .mat-radio-button {
+    margin-left: 16px;
+}
+
+::ng-deep.mat-radio-button.mat-accent .mat-radio-outer-circle {
+   border-color:rgb(255, 255, 255)!important; /*outer ring color change*/
+}
+
+@media all and (max-width: 988px) {
+    .content{
+        padding: 0;
+        padding-top: 5%;
+    }
+    .post-card {
+        width: 40%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media all and (max-width: 520px) {
+    .post-card {
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .paginator{
+        padding-left: 0;
+    }
+    
+    .paginator_container{
+        width: 60%;
+        margin: 5% auto;
+        margin-bottom: 10%;
+    }
+
+    .newPostContainer{
+        padding-left: 0;
+        padding-top: 2%;
+        width: 70%;
+        margin: 0 auto;
+    }
+
+    .search_form{
+        margin-top: 7%;
+        margin-bottom: 7%;
+    }
+
+    .form-group{
+        margin: 2%;
+    }
+
+    .newPostClass{
+        width: 100%;
+    }
+
+    .newPostClass .form-group{
+        margin-left: 0;
+    }
+}
