--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,6 @@
       </div>
     </div>
     <div class="right_side row align_right_text">
-      <div class="col"></div>
       <div class="col">
         <h3>
           Learning from your mistakes sounds like a cliché...
@@ -25,20 +24,22 @@
       </div>
     </div>
     <div class="row center_side justify-content-center">
-      <h2 class="list_of_words_flow">
-        <div class="word space_word">
-          Create.
-        </div>
-        <div class="word space_word">
-          Fail.
-        </div>
-        <div class="word space_word">
-          Try again. 
-        </div>
-        <div class="word">
-          <span class="white_word">Be the best.</span>
-        </div>
-      </h2>
+      <div class="col d-flex justify-content-center">
+        <h2 class="list_of_words_flow">
+          <div class="word space_word">
+            Create.
+          </div>
+          <div class="word space_word">
+            Fail.
+          </div>
+          <div class="word space_word">
+            Try again. 
+          </div>
+          <div class="word">
+            <span class="white_word">Be the best.</span>
+          </div>
+        </h2>
+      </div>
     </div>
   </div>
   <div id="informationSection" class="information">
@@ -50,7 +51,7 @@
         <p class="information_text">
           You have an idea but you need partners, investors or validation? You can share it here so others
           can rate it and give feedbacks!
-          Here you can find people to team up with and make your idea come to life, or find investor
+          Here you can find people to team up with and make your idea come to life, or find investors
           for your business.
         </p>
         <h2 class="how_it_works">
