--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -43,3 +43,11 @@
 .is-active{
     color: white !important;
 }
+
+.navbar-light .navbar-toggler{
+    background-color: white;
+}
+
+.nav-item{
+    text-align: center;
+}
