--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -10,6 +10,12 @@
     </button>
   </div>
 </form>
+<!--<div class="d-flex justify-content-center">
+  <mat-radio-group aria-label="Select an option" [(ngModel)]="searchFilter">
+    <mat-radio-button value="postFilter">Posts</mat-radio-button>
+    <mat-radio-button value="userFilter">Users</mat-radio-button>
+  </mat-radio-group>
+</div>-->
 <div class="newPostContainer">
   <button type="button" class="btn custom_btn new_button" (click)="newPostButton()">New post</button>
   <form *ngIf="newPost" [formGroup]="newPostForm" (ngSubmit)="onSubmit()" class="newPostClass">
@@ -89,7 +95,7 @@
         <img mat-card-avatar class="post-header-image"
         src="http://www.prodbackend.com/img/{{post.user.avatar}}">
         <mat-card-title>
-          <a [routerLink]="['../profile', post.user.id]">
+          <a routerLink="/profile/{{post.user.id}}">
             {{ post.user.username }}
           </a>
         </mat-card-title>
@@ -100,26 +106,30 @@
         {{ (post.text.length > 200) ? (post.text | slice:0:200) + '...' : (post.text) }}
       </p>
       <p class="categories" *ngFor="let category of post.categories">
-        {{ category.name }}&nbsp;
+        <a routerLink="/community/byCategory/{{category.name}}">
+          {{ category.name }}&nbsp;
+        </a>
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <a mat-button [routerLink]="['./', post.id]">COMMENT ({{post.comments_count}})</a>
+      <a mat-button routerLink="/community/{{post.id}}">COMMENT ({{post.comments_count}})</a>
     </mat-card-actions>
   </mat-card>
 </div>
-<nav class="paginator" *ngIf="paginatorData">
-  <ul class="pagination">
-    <li class="page-item" [ngClass]="{'disabled': paginatorData.prev_page_url == null}">
-      <a class="page-link" [routerLink]="" (click)="prevPage()">Previous</a>
-    </li>
-    <li class="page-item" 
-    *ngFor="let item of [].constructor(paginatorData.last_page); let i = index"
-    [ngClass]="{'active': paginatorData.current_page == i + 1}">
-      <a class="page-link" [routerLink]="" (click)="byPageNumber(i+1)">{{ i + 1 }}</a>
-    </li>
-    <li class="page-item" [ngClass]="{'disabled': paginatorData.next_page_url == null}">
-      <a class="page-link" [routerLink]="" (click)="nextPage()">Next</a>
-    </li>
-  </ul>
-</nav>
+<div class="paginator_container">
+  <nav class="paginator" *ngIf="paginatorData">
+    <ul class="pagination">
+      <li class="page-item" [ngClass]="{'disabled': paginatorData.prev_page_url == null}">
+        <a class="page-link" [routerLink]="" (click)="prevPage()">Previous</a>
+      </li>
+      <li class="page-item" 
+      *ngFor="let item of [].constructor(paginatorData.last_page); let i = index"
+      [ngClass]="{'active': paginatorData.current_page == i + 1}">
+        <a class="page-link" [routerLink]="" (click)="byPageNumber(i+1)">{{ i + 1 }}</a>
+      </li>
+      <li class="page-item" [ngClass]="{'disabled': paginatorData.next_page_url == null}">
+        <a class="page-link" [routerLink]="" (click)="nextPage()">Next</a>
+      </li>
+    </ul>
+  </nav>
+</div>
