--- a/src/app/ideas/ideas.component.html
+++ b/src/app/ideas/ideas.component.html
@@ -4,12 +4,18 @@
     type="search" placeholder="Search..." aria-label="Search">
   </div>
   <div class="form-group">
-    <button class="btn btn-outline-info my-2 my-sm-0 custom_btn" type="submit">
+    <button class="btn btn-outline-info my-2 my-sm-0 custom_btn search_button" type="submit">
       <span *ngIf="searchLoading" class="spinner-border spinner-border-sm mr-1"></span>
       Search
     </button>
   </div>
 </form>
+<!--<div class="d-flex justify-content-center">
+  <mat-radio-group aria-label="Select an option" [(ngModel)]="searchFilter">
+    <mat-radio-button value="ideaFilter">Ideas</mat-radio-button>
+    <mat-radio-button value="userFilter">Users</mat-radio-button>
+  </mat-radio-group>
+</div>-->
 <div class="newIdea">
   <button type="button" class="btn custom_btn new_button" (click)="postNewIdeaButton()">Post new idea</button>
   <form *ngIf="postNewIdea" [formGroup]="newIdeaForm" (ngSubmit)="onSubmit()" class="newIdeaPostClass">
@@ -107,7 +113,7 @@
         <img mat-card-avatar class="idea-header-image"
         src="http://www.prodbackend.com/img/{{idea.user.avatar}}">
         <mat-card-title>
-          <a [routerLink]="['../profile', idea.user.id]">
+          <a routerLink="/profile/{{idea.user.id}}">
             {{ idea.user.username }}
           </a>
         </mat-card-title>
@@ -116,7 +122,7 @@
     <img mat-card-image src="http://www.prodbackend.com/img/{{idea.picture}}" alt="Photo of an idea">
     <mat-card-content>
       <h5>
-        <a [routerLink]="['./', idea.id]">
+        <a routerLink="/ideas/{{idea.id}}">
           <b>{{ (idea.title.length > 20) ? (idea.title | slice:0:20) + '...' : (idea.title) }}</b>
         </a>
       </h5>
@@ -124,7 +130,9 @@
         {{ (idea.description.length > 40) ? (idea.description | slice:0:40) + '...' : (idea.description) }}
       </p>
       <p class="categories" *ngFor="let category of idea.categories">
-        {{ category.name }}&nbsp;
+        <a routerLink="/ideas/byCategory/{{category.name}}">
+          {{ category.name }}&nbsp;
+        </a>
       </p>
     </mat-card-content>
     <mat-card-actions>
@@ -134,22 +142,24 @@
           <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
       </div>
-      <a mat-button [routerLink]="['./', idea.id]">COMMENT ({{idea.comments_count}})</a>
+      <a mat-button routerLink="/ideas/{{idea.id}}">COMMENT ({{idea.comments_count}})</a>
     </mat-card-actions>
   </mat-card>
 </div>
-<nav class="paginator" *ngIf="paginatorData">
-  <ul class="pagination">
-    <li class="page-item" [ngClass]="{'disabled': paginatorData.prev_page_url == null}">
-      <a class="page-link" [routerLink]="" (click)="prevPage()">Previous</a>
-    </li>
-    <li class="page-item" 
-    *ngFor="let item of [].constructor(paginatorData.last_page); let i = index"
-    [ngClass]="{'active': paginatorData.current_page == i + 1}">
-      <a class="page-link" [routerLink]="" (click)="byPageNumber(i+1)">{{ i + 1 }}</a>
-    </li>
-    <li class="page-item" [ngClass]="{'disabled': paginatorData.next_page_url == null}">
-      <a class="page-link" [routerLink]="" (click)="nextPage()">Next</a>
-    </li>
-  </ul>
-</nav>
+<div class="paginator_container">
+  <nav class="paginator" *ngIf="paginatorData">
+    <ul class="pagination">
+      <li class="page-item" [ngClass]="{'disabled': paginatorData.prev_page_url == null}">
+        <a class="page-link" [routerLink]="" (click)="prevPage()">Previous</a>
+      </li>
+      <li class="page-item" 
+      *ngFor="let item of [].constructor(paginatorData.last_page); let i = index"
+      [ngClass]="{'active': paginatorData.current_page == i + 1}">
+        <a class="page-link" [routerLink]="" (click)="byPageNumber(i+1)">{{ i + 1 }}</a>
+      </li>
+      <li class="page-item" [ngClass]="{'disabled': paginatorData.next_page_url == null}">
+        <a class="page-link" [routerLink]="" (click)="nextPage()">Next</a>
+      </li>
+    </ul>
+  </nav>
+</div>
