--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -53,3 +53,11 @@
 .custom_btn:focus{
     box-shadow: none !important;
 }
+
+@media all and (max-width: 988px) {
+    .login_container{
+        width: 80%;
+        margin-top: 10%;
+        margin-bottom: 20%;
+    }
+}
