--- a/src/app/response-reset/response-reset.component.scss
+++ b/src/app/response-reset/response-reset.component.scss
@@ -36,3 +36,11 @@
 .custom_btn:focus{
     box-shadow: none !important;
 }
+
+@media all and (max-width: 988px) {
+    .response_pw_container{
+        width: 80%;
+        margin-top: 10%;
+        margin-bottom: 20%;
+    }
+}
