--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -41,3 +41,11 @@
 .custom_btn:focus{
     box-shadow: none !important;
 }
+
+@media all and (max-width: 988px) {
+    .signup_container{
+        width: 80%;
+        margin-top: 10%;
+        margin-bottom: 20%;
+    }
+}
