production urls - everything is ready to deploy

--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -93,7 +93,7 @@
         </div>
       </div>
         <img mat-card-avatar class="post-header-image"
-        src="http://www.prodbackend.com/img/{{post.user.avatar}}">
+        src="https://api.productivera.com/img/{{post.user.avatar}}">
         <mat-card-title>
           <a routerLink="/profile/{{post.user.id}}">
             {{ post.user.username }}
