home text; already deployed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -49,10 +49,10 @@
           What is Productivera?
         </h2>
         <p class="information_text">
-          You have an idea but you need partners, investors or validation? You can share it here so others
+          You have an idea but you need partners, help or validation? You can share it here so others
           can rate it and give feedbacks!
-          Here you can find people to team up with and make your idea come to life, or find investors
-          for your business.
+          Here you can find people to team up with and make your idea come to life, or find like-minded 
+          people.
         </p>
         <h2 class="how_it_works">
           How does it work?
