privacy policy, terms and conditions + copywrite + design

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,11 @@
 <div class="footer_content">
   Copyright © 2020 Productivera
+  <br>
+  <a routerLink="/privacy-policy">
+    Privacy Policy
+  </a>
+  <br>
+  <a routerLink="/terms-cond">
+    Terms and Conditions
+  </a>
 </div>
