--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -46,20 +46,15 @@
     <div class="row">
       <div class="col what_is_it">
         <h2>
-          What is Productivera?
+          Productivera is all about ideas and networking
         </h2>
         <p class="information_text">
-          You have an idea but you need partners, help or validation? You can share it here so others
+          You have an idea but you need partners, help or validation? Share it here so others
           can rate it and give feedbacks!
-          Here you can find people to team up with and make your idea come to life, or find like-minded 
-          people.
         </p>
-        <h2 class="how_it_works">
-          How does it work?
-        </h2>
         <p class="information_text">
-          It's easy: you can post your idea/business/expertise, or you can browse and see what others
-          are up to and team up with them, give them your opinion and help them grow.
+          You can post your idea/business/expertise, or you can browse and see what others
+          are up to and team up with them, give them your opinion and grow together.
         </p>
       </div>
     </div>
