--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -7,19 +7,19 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/home" routerLinkActive="is-active">Home</a>
+        <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/home" routerLinkActive="is-active">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/ideas" routerLinkActive="is-active">Explore</a>
+        <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/ideas" routerLinkActive="is-active">Explore</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/community" routerLinkActive="is-active">Community</a>
+        <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/community" routerLinkActive="is-active">Community</a>
       </li>
       <li class="nav-item" *ngIf="!loggedIn">
-        <a class="nav-link" routerLink="/login" routerLinkActive="is-active">Login</a>
+        <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/login" routerLinkActive="is-active">Login</a>
       </li>
       <li class="nav-item" *ngIf="loggedIn">
-        <a class="nav-link" routerLink="/profile" 
+        <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="/profile" 
         routerLinkActive="is-active">
           <div matBadge="!" matBadgePosition="before" matBadgeColor="accent" matBadgeSize="small" [matBadgeHidden]="hideNotification">
             Profile
@@ -27,7 +27,7 @@
         </a>
       </li>
       <li class="nav-item" *ngIf="loggedIn">
-        <a class="nav-link" href="#" (click)="logout($event)" routerLinkActive="is-active">Logout</a>
+        <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#" (click)="logout($event)" routerLinkActive="is-active">Logout</a>
       </li>
     </ul>
   </div>
