design - deployed already

--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -4,7 +4,7 @@
     <h2 *ngIf="idea">
       {{ idea.title }}
     </h2>
-    <h4 *ngIf="idea">
+    <h4 *ngIf="idea" class="idea_desc">
       {{ idea.description }}
     </h4>
     <p *ngIf="idea">
