--- a/src/app/comments/comments.component.scss
+++ b/src/app/comments/comments.component.scss
@@ -12,6 +12,10 @@
     text-align: center;
 }
 
+.idea_desc{
+    padding: 3%;
+}
+
 .comments_content{
     margin-top: 5%;
     margin-bottom: 5%;
