--- a/src/app/ideas/ideas.component.html
+++ b/src/app/ideas/ideas.component.html
@@ -145,6 +145,9 @@
       </div>
       <a mat-button routerLink="/ideas/{{idea.id}}">COMMENT ({{idea.comments_count}})</a>
     </mat-card-actions>
+    <p class="little_text">
+      {{ idea.created_at | date: 'yyyy-MM-dd HH:mm' }}
+    </p>
   </mat-card>
 </div>
 <div class="paginator_container">
