--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="profileInfo" class="row break_words">
     <div class="col justify-content-center text-center pic_name">
       <img class="avatar_pic"
-      src="https://api.productivera.com/img/{{profileInfo.avatar}}">
+      src="http://www.prodbackend.com/img/{{profileInfo.avatar}}">
       <div class="upload_avatar">
         <input id="selectFileInput" #selectFileInput type="file" (change)="onFileSelected($event)" style="display: none;">
         <input type="button" value="Browse..." onclick="document.getElementById('selectFileInput').click();"/>
@@ -179,7 +179,7 @@
       <mat-card class="idea-card break_words" *ngFor="let idea of profileInfo.ideas" id="{{ idea.id }}">
         <mat-card-header>
             <img mat-card-avatar class="idea-header-image"
-            src="https://api.productivera.com/img/{{profileInfo.avatar}}">
+            src="http://www.prodbackend.com/img/{{profileInfo.avatar}}">
             <mat-card-title>
               <a routerLink="/profile" class="blue_link">
                 {{ profileInfo.username }}
@@ -187,7 +187,7 @@
             </mat-card-title>
             <mat-card-subtitle>{{ profileInfo.status }}</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image src="https://api.productivera.com/img/{{idea.picture}}" alt="Photo of an idea">
+        <img mat-card-image src="http://www.prodbackend.com/img/{{idea.picture}}" alt="Photo of an idea">
         <mat-card-content>
           <h5>
             <a [routerLink]="['../ideas/', idea.id]" class="blue_link">
@@ -228,7 +228,7 @@
       <mat-card class="post-card break_words" *ngFor="let post of profileInfo.userposts" id="{{ post.id }}">
         <mat-card-header>
             <img mat-card-avatar class="post-header-image"
-            src="https://api.productivera.com/img/{{profileInfo.avatar}}">
+            src="http://www.prodbackend.com/img/{{profileInfo.avatar}}">
             <mat-card-title>
               <a routerLink="/profile" class="blue_link">
                 {{ profileInfo.username }}
