--- a/src/app/ideas/ideas.component.html
+++ b/src/app/ideas/ideas.component.html
@@ -112,7 +112,7 @@
         </div>
       </div>
         <img mat-card-avatar class="idea-header-image"
-        src="https://api.productivera.com/img/{{idea.user.avatar}}">
+        src="http://www.prodbackend.com/img/{{idea.user.avatar}}">
         <mat-card-title>
           <a routerLink="/profile/{{idea.user.id}}">
             {{ idea.user.username }}
@@ -120,7 +120,7 @@
         </mat-card-title>
         <mat-card-subtitle>{{ idea.user.status }}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="https://api.productivera.com/img/{{idea.picture}}" alt="Photo of an idea">
+    <img mat-card-image src="http://www.prodbackend.com/img/{{idea.picture}}" alt="Photo of an idea">
     <mat-card-content>
       <h5>
         <a routerLink="/ideas/{{idea.id}}">
