--- a/src/app/ideas/ideas.component.scss
+++ b/src/app/ideas/ideas.component.scss
@@ -5,23 +5,55 @@
     align-content: flex-start;
 }
 
+.container{
+    margin-bottom: 5%;
+}
+
+.ideas_col, .information_prod_col, .comments_col{
+    border: 10px solid rgba(0, 0, 0, 0.2);
+    margin-right: 1%;
+    padding: 0;
+}
+
+.information_prod_col, .comments_col{
+    padding: 4%;
+}
+
+.comments_col{
+    margin-top: 3%;
+}
+
+.comment-user-avatar{
+    width: 30px;
+    height: 30px;
+}
+
+.mat-list-item{
+    color: white !important;
+}
+
+.ideas_col{
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.what_prod_desc{
+    margin-top: 4%;
+    font-size: 14px;
+}
+
 .newIdea{
-    padding-left: 7%;
+    padding-left: 4%;
     padding-top: 2%;
 }
 
 .idea-card {
-    width: 20%;
+    width: 28%;
     color: black;
 }
 
 .idea-header-image {
     background-size: cover;
-}
-
-.mat-card-image{
-    height: 180px; /* adjust as needed */
-    object-fit: contain;
 }
 
 .mat-card-title{
@@ -39,8 +71,9 @@
 
 .mat-card {
     margin: 2%;
+    margin-right: 3%;
     display: inline-block;
-    background-color: rgba(255, 255, 255, 0.671);
+    background-color: rgb(255, 255, 255);
     font-family: "Montserrat", Sans-serif;
     display: flex;
     flex-direction: column;
@@ -48,16 +81,16 @@
 }
 
 .mat-card-header {
-  flex-shrink: 0;
+    flex-shrink: 0;
 }
 
 .mat-card-content{
-  flex-grow: 1;
-  overflow: auto;
+    flex-grow: 1;
+    overflow: auto;
 }
 
 .content{
-    padding: 5%;
+    padding: 2%;
     padding-top: 2%;
 }
 
@@ -95,18 +128,21 @@
 
 .search_form{
     margin: 2%;
+    margin-left: 0;
 }
 
 .categories{
     color: rgb(99, 99, 99);
     display: inline-block;
-    background-color: rgba(202, 202, 202, 0.596);
+    background-color: rgba(212, 212, 212, 0.596);
     margin: 1%;
     margin-left: 0;
+    font-size: 12px;
+    padding: 2px;
 }
 
 .paginator{
-    padding-left: 7%;
+    padding-left: 4%;
 }
 
 .page-item.active .page-link{
@@ -153,12 +189,12 @@
 }
 
 .new_button{
-    background-color: #BA1D4C !important;
+    background: radial-gradient(#C5003B, #90004F) !important;
+    border: none;
 }
 
 .new_button:hover{
-    background-color: #97193f !important;
-    border-color: #97193f;
+    background: radial-gradient(#90004F, #C5003B) !important;
 }
 
 .break_words{
