--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,10 +1,10 @@
 .navbar{
-    background-color: rgba(255, 255, 255, 0) !important;
-    font-size: 1.2em;
+    background-color: #621840 !important;
+    font-size: 1.1em;
     font-weight: bold;
-    padding: 2%;
-    padding-left: 3%;
-    padding-right: 3%;
+    padding: 1%;
+    padding-left: 4%;
+    padding-right: 4%;
 }
 
 .nav-item{
@@ -33,11 +33,10 @@
 
 .navbar-brand{
     margin-left: 10px;
-    font-size: 1.4em;
 }
 
 .productivera_logo{
-    width: 40px;
+    width: 30px;
 }
 
 .is-active{
